cluster/apps/home/actual/service.yaml
---
kind: Service
metadata:
  name: actual
  namespace: home
  labels:
    app: actual
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5006
      targetPort: http
  selector:
    app: actual
