cluster/apps/home/actual/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: home
  labels:
    app: actual
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
spec:
  ingressClassName: 'traefik'
  rules:
    - host: 'actual.${SECRET_DOMAIN}'
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: actual
                port:
                  number: 5006
  tls:
    - hosts:
        - 'actual.${SECRET_DOMAIN}'
